--- a/roles/southwest-checkin/tasks/main.yml
+++ b/roles/southwest-checkin/tasks/main.yml
@@ -2,3 +2,11 @@
 - import_tasks: clone-scripts.yml
 
 - import_tasks: docker-pull.yml
+
+- name: Create log folder
+  become: true
+  file:
+    path: "/var/log/sws"
+    mode: "0777"
+    owner: root
+    recurse: yes
