--- a/src/site.yml
+++ b/src/site.yml
@@ -1,7 +1,7 @@
 ---
 # Site.yml - also known as the master playbook that will drive the roles
 
-- hosts: all
+- hosts: common
   vars_files:
     - "vars.yml"
   roles:
@@ -18,6 +18,13 @@
     - role: common
       tag:
         - common
+- hosts: nut-server
+  vars_files:
+    - "vars.yml"
+  roles:
+    - role: nut-host
+      tag:
+        - nut
 - hosts: dns-server
   vars_files:
     - "vars.yml"
