--- a/src/vars.template.yml
+++ b/src/vars.template.yml
@@ -1,5 +1,6 @@
 ---
-# Server Configuration
+# Basic server configuration - used for common
+#####################################################################
 user_name: <user_name>
 ssh_port: <ssh_port>
 time_zone: <time_zone>
@@ -7,6 +8,9 @@ time_zone: <time_zone>
 location_state_abbr: <current_state_location>
 # For SWS & Weather
 location_city: <current_city_location>
+# Oh my zsh plugin location
+zsh_plugin_location: /.oh-my-zsh/custom/plugins/
+#####################################################################
 
 # Docker Configuration
 docker_hub_username: <docker_hub_user>
@@ -59,7 +63,4 @@ contact_email: <contact_email>
 piwigo_mysql_user: <user>
 piwigo_mysql_password: <pass>
 piwigo_root_mysql_password: <root pass>
-
-# Oh my zsh
-zsh_plugin_location: /.oh-my-zsh/custom/plugins/
 #==========================================================
