--- a/src/roles/common/tasks/shell-config.yml
+++ b/src/roles/common/tasks/shell-config.yml
@@ -55,6 +55,9 @@
     src: /home/{{ user_name }}/zsh-plugins/zsh-autosuggestions
     dest: "/home/{{ user_name }}/{{ zsh_plugin_location }}/"
 
+- name: Delete local git directory
+  file: path /home/{{ user_name }}/zsh-plugins state=absent
+
 - name: Add customization to '.zshrc' file
   blockinfile:
     path: /home/{{ user_name }}/.zshrc
