--- a/src/roles/dns/tasks/setup-dns.yml
+++ b/src/roles/dns/tasks/setup-dns.yml
@@ -2,8 +2,8 @@
 - name: Load 'pihole.conf'
   become: true
   copy:
-    src: "{{ docker_host_location }}/nginx/proxy-confs/pihole.subdomain.conf.sample"
-    dest: "{{ docker_host_location }}/nginx/proxy-confs/pihole.subdomain.conf"
+    src: "{{ cert_manager_folder_location }}/nginx/proxy-confs/pihole.subdomain.conf.sample"
+    dest: "{{ cert_manager_folder_location }}/nginx/proxy-confs/pihole.subdomain.conf"
     remote_src: true
     mode: "0755"
     owner: william
