--- a/src/roles/app-server/tasks/docuwiki.yml
+++ b/src/roles/app-server/tasks/docuwiki.yml
@@ -27,15 +27,15 @@
 - name: Change subdomain to 'wiki.*''
   become: true
   replace:
-    path: "{{ docker_host_location }}/nginx/proxy-confs/dokuwiki.subdomain.conf.sample"
+    path: "{{ cert_manager_folder_location }}/nginx/proxy-confs/dokuwiki.subdomain.conf.sample"
     regexp: "dokuwiki.*"
     replace: wiki.*
 
 - name: Load 'dockuwiki.conf'
   become: true
   copy:
-    src: "{{ docker_host_location }}/nginx/proxy-confs/dokuwiki.subdomain.conf.sample"
-    dest: "{{ docker_host_location }}/nginx/proxy-confs/dokuwiki.subdomain.conf"
+    src: "{{ cert_manager_folder_location }}/nginx/proxy-confs/dokuwiki.subdomain.conf.sample"
+    dest: "{{ cert_manager_folder_location }}/nginx/proxy-confs/dokuwiki.subdomain.conf"
     remote_src: true
     mode: "0755"
     owner: william
