--- a/src/roles/app-server/tasks/mealie.yml
+++ b/src/roles/app-server/tasks/mealie.yml
@@ -4,8 +4,8 @@
 - name: Load 'mealie.conf'
   become: true
   copy:
-    src: "{{ docker_host_location }}/nginx/proxy-confs/mealie.subdomain.conf.sample"
-    dest: "{{ docker_host_location }}/nginx/proxy-confs/mealie.subdomain.conf"
+    src: "{{ cert_manager_folder_location }}/nginx/proxy-confs/mealie.subdomain.conf.sample"
+    dest: "{{ cert_manager_folder_location }}/nginx/proxy-confs/mealie.subdomain.conf"
     remote_src: true
     mode: "0755"
     owner: william
