--- a/src/roles/app-server/tasks/piwigo.yml
+++ b/src/roles/app-server/tasks/piwigo.yml
@@ -28,15 +28,15 @@
 - name: Change subdomain to 'photos.*''
   become: true
   replace:
-    path: "{{ docker_host_location }}/nginx/proxy-confs/piwigo.subdomain.conf.sample"
+    path: "{{ cert_manager_folder_location }}/nginx/proxy-confs/piwigo.subdomain.conf.sample"
     regexp: "piwigo.*"
     replace: photos.*
 
 - name: Load 'dockuwiki.conf'
   become: true
   copy:
-    src: "{{ docker_host_location }}/nginx/proxy-confs/piwigo.subdomain.conf.sample"
-    dest: "{{ docker_host_location }}/nginx/proxy-confs/piwigo.subdomain.conf"
+    src: "{{ cert_manager_folder_location }}/nginx/proxy-confs/piwigo.subdomain.conf.sample"
+    dest: "{{ cert_manager_folder_location }}/nginx/proxy-confs/piwigo.subdomain.conf"
     remote_src: true
     mode: "0755"
     owner: william
