--- a/src/roles/app-server/tasks/portainer.yml
+++ b/src/roles/app-server/tasks/portainer.yml
@@ -3,8 +3,8 @@
 - name: Load 'portainer.conf'
   become: true
   copy:
-    src: "{{ docker_host_location }}/nginx/proxy-confs/portainer.subdomain.conf.sample"
-    dest: "{{ docker_host_location }}/nginx/proxy-confs/portainer.subdomain.conf"
+    src: "{{ cert_manager_folder_location }}/nginx/proxy-confs/portainer.subdomain.conf.sample"
+    dest: "{{ cert_manager_folder_location }}/nginx/proxy-confs/portainer.subdomain.conf"
     remote_src: true
     mode: "0755"
     owner: william
