--- a/src/roles/app-server/files/old.ha.conf
+++ b/src/roles/app-server/files/old.ha.conf
@@ -1,4 +1,5 @@
 # Home Assistant
+# #TODO: See if I need this for ha_container_ip
 server {
    listen 443 ssl http2;
    server_name home.{{ dns_to_renew }};
