let's get portainer running

--- a/src/roles/app-server/tasks/portainer.yml
+++ b/src/roles/app-server/tasks/portainer.yml
@@ -16,6 +16,8 @@
     image: portainer/portainer-ce
     restart_policy: unless-stopped
     pull: true
+    container_default_behavior: compatiblity
+    network_mode: curidge
     networks:
       - name: curidge
     volumes:
