--- a/src/roles/app-server/tasks/docker-setup.yml
+++ b/src/roles/app-server/tasks/docker-setup.yml
@@ -84,7 +84,7 @@
     owner: root
     recurse: yes
 
-- name: Add '{{ user_name }}'' user to docker group
+- name: Add '{{ user_name }}' user to docker group
   become: true
   user:
     name: "{{ user_name }}"
