--- a/src/roles/app-server/tasks/main.yml
+++ b/src/roles/app-server/tasks/main.yml
@@ -21,20 +21,20 @@
       com.centurylinklabs.watchtower.enable: "true"
 
 
-- import_tasks: swag.yml
+#- import_tasks: swag.yml
 
-- import_tasks: portainer.yml
+#- import_tasks: portainer.yml
 
-- import_tasks: uptime-kuma.yml
+#- import_tasks: uptime-kuma.yml
 
-- import_tasks: plex.yml
+#- import_tasks: plex.yml
 
-- import_tasks: tautulli.yml
+#- import_tasks: tautulli.yml
 
-- import_tasks: transmission.yml
+#- import_tasks: transmission.yml
 
-- import_tasks: mealie.yml
+#- import_tasks: mealie.yml
 
-- import_tasks: docuwiki.yml
+#- import_tasks: docuwiki.yml
 
-- import_tasks: piwigo.yml
+#- import_tasks: piwigo.yml
