--- a/src/roles/app-server/tasks/swag.yml
+++ b/src/roles/app-server/tasks/swag.yml
@@ -42,3 +42,19 @@
       - 80:80
     labels:
       com.centurylinklabs.watchtower.enable: "true"
+
+##################################################################################################
+## Load DNS configs below here
+##################################################################################################
+- name: Load 'portainer.conf'
+  become: true
+  copy:
+    src: "{{ cert_manager_folder_location }}/nginx/proxy-confs/portainer.subdomain.conf.sample"
+    dest: "{{ cert_manager_folder_location }}/nginx/proxy-confs/portainer.subdomain.conf"
+    remote_src: true
+    mode: "0755"
+    owner: william
+    group: william
+
+
+##################################################################################################
