--- a/src/roles/app-server/tasks/main.yml
+++ b/src/roles/app-server/tasks/main.yml
@@ -19,6 +19,7 @@
       WATCHTOWER_LABEL_ENABLE: "true"
     labels:
       com.centurylinklabs.watchtower.enable: "true"
+    container_default_behavior: compatibility
 
 - import_tasks: portainer.yml
 
