--- a/src/roles/app-server/tasks/portainer.yml
+++ b/src/roles/app-server/tasks/portainer.yml
@@ -6,8 +6,6 @@
     image: portainer/portainer-ce
     restart_policy: unless-stopped
     pull: true
-    container_default_behavior: compatiblity
-    network_mode: curidge
     networks:
       - name: curidge
     volumes:
@@ -19,3 +17,4 @@
       - 9000:9000
     labels:
       com.centurylinklabs.watchtower.enable: "true"
+    container_default_behavior: compatibility
