--- a/src/roles/app-server/tasks/main.yml
+++ b/src/roles/app-server/tasks/main.yml
@@ -25,13 +25,13 @@
 
 - import_tasks: uptime-kuma.yml
 
+- import_tasks: transmission.yml
+
 #- import_tasks: swag.yml
 
 #- import_tasks: plex.yml
 
 #- import_tasks: tautulli.yml
-
-#- import_tasks: transmission.yml
 
 #- import_tasks: mealie.yml
 
