--- a/src/roles/app-server/tasks/main.yml
+++ b/src/roles/app-server/tasks/main.yml
@@ -27,9 +27,11 @@
 
 - import_tasks: transmission.yml
 
+- import_tasks: plex.yml
+
 #- import_tasks: swag.yml
 
-#- import_tasks: plex.yml
+- import_tasks: plex.yml
 
 #- import_tasks: tautulli.yml
 
