minor mounting problems

--- a/src/roles/app-server/tasks/docker-setup.yml
+++ b/src/roles/app-server/tasks/docker-setup.yml
@@ -50,7 +50,7 @@
 - name: Docker is running
   service:
     name: docker
-    state: started
+    state: running
 
 - name: Find physical network adapter
   command: find /sys/class/net -type l -not -lname '*virtual*' -printf '%f\n'
