--- a/src/roles/app-server/tasks/docker-setup.yml
+++ b/src/roles/app-server/tasks/docker-setup.yml
@@ -4,9 +4,6 @@
   become: true
   apt:
     pkg:
-      - docker
-      - docker-engine
-      - docker.io
       - containerd
       - runc
     state: absent
@@ -50,7 +47,7 @@
 - name: Docker is running
   service:
     name: docker
-    state: running
+    state: started
 
 - name: Find physical network adapter
   command: find /sys/class/net -type l -not -lname '*virtual*' -printf '%f\n'
