--- a/src/roles/app-server/tasks/plex.yml
+++ b/src/roles/app-server/tasks/plex.yml
@@ -55,5 +55,6 @@
       PUID: "1000"
       PGID: "1000"
       VERSION: "docker"
+      PLEX_CLAIM: "{{ plex_claim_token}}"
     labels:
       com.centurylinklabs.watchtower.enable: "true"
