--- a/src/roles/app-server/tasks/main.yml
+++ b/src/roles/app-server/tasks/main.yml
@@ -29,12 +29,10 @@
 
 - import_tasks: plex.yml
 
+- import_tasks: mealie.yml
+
+- import_tasks: docuwiki.yml
+
+- import_tasks: piwigo.yml
+
 #- import_tasks: swag.yml
-
-#- import_tasks: tautulli.yml
-
-#- import_tasks: mealie.yml
-
-#- import_tasks: docuwiki.yml
-
-#- import_tasks: piwigo.yml
