--- a/src/roles/app-server/tasks/mealie.yml
+++ b/src/roles/app-server/tasks/mealie.yml
@@ -13,8 +13,8 @@
         ipv4_address: "{{ mealie_container_ip }}"
     env:
       TZ: "{{ time_zone }}"
-      PUID: 1000
-      PGID: 1000
+      PUID: "1000"
+      PGID: "1000"
       RECIPE_PUBLIC: "true"
       RECIPE_SHOW_NUTRITION: "true"
       RECIPE_SHOW_ASSETS: "true"
