--- a/src/roles/app-server/tasks/tautulli.yml
+++ b/src/roles/app-server/tasks/tautulli.yml
@@ -10,6 +10,8 @@
       - name: port-freedom
         ipv4_address: "{{ tautulli_container_ip }}"
     pull: true
+    ports:
+      - 80:8181
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/docker/tautulli:/config"
