--- a/src/vars.template.yml
+++ b/src/vars.template.yml
@@ -51,7 +51,7 @@ node_red_container_ip: 192.168.96.11
 mealie_container_ip: 192.168.96.12
 pi_hole_container_ip: 192.168.96.13
 tautulli_container_ip: 192.168.96.13
-docuwiki_container_ip: 192.168.169.10
+dokuwiki_container_ip: 192.168.169.10
 piwigo_container_ip: 192.168.169.11
 piwigo_mysql_ip: 192.168.169.12
 
