fix(nut): upsmon.conf is not setup correctly
- fix it

--- a/src/roles/nut-host/tasks/configure.yml
+++ b/src/roles/nut-host/tasks/configure.yml
@@ -34,7 +34,7 @@
   become: true
   template:
     src: upsmon.conf
-    dest: /etc/nut/upsd.conf
+    dest: /etc/nut/upsmon.conf
     owner: root
     group: root
 
