--- a/src/roles/nut-host/templates/upsd.conf
+++ b/src/roles/nut-host/templates/upsd.conf
@@ -30,6 +30,7 @@
 # LISTEN <address> [<port>]
 LISTEN 127.0.0.1 3493
 LISTEN ::1 3493
+LISTEN {{ ansible_host }} 3493
 #
 # This defaults to the localhost listening addresses and port 3493.
 # In case of IP v4 or v6 disabled kernel, only the available one will be used.
