--- a/src/roles/nut-host/tasks/configure.yml
+++ b/src/roles/nut-host/tasks/configure.yml
@@ -16,7 +16,7 @@
 
 - name: Ensure that upsd.conf is loaded
   become: true
-  copy:
+  template:
     src: upsd.conf
     dest: /etc/nut/upsd.conf
     owner: root
