--- a/src/roles/app-server/tasks/traccar.yml
+++ b/src/roles/app-server/tasks/traccar.yml
@@ -18,7 +18,7 @@
   become: true
   template:
     src: traccar.conf
-    dest: /docker/traccar/config/traccar.conf
+    dest: /docker/traccar/config/traccar.xml
     owner: root
     group: root
 
