--- a/src/roles/monitoring/tasks/prometheus-setup.yml
+++ b/src/roles/monitoring/tasks/prometheus-setup.yml
@@ -8,8 +8,8 @@
     networks:
       - name: curidge
     volumes:
-      - "/docker/prometheus:/etc/prometheus"
-      - "/docker/prometheus/data:/prometheus"
+      - "{{ host_docker_folder_location }}:/etc/prometheus"
+      - "{{ host_docker_folder_location }}/data:/prometheus"
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
@@ -39,6 +39,7 @@
       - "/:/host:ro,rslave"
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
+      - "/var/run/docker.sock:/var/run/docker.sock"
       - "/docker/portainer:/data"
     pid: host
     labels:
@@ -64,6 +65,7 @@
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
       - /dev/disk/:/dev/disk:ro
+      - "/var/run/docker.sock:/var/run/docker.sock"
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
       - "/docker/portainer:/data"
