--- a/src/roles/monitoring/files/prometheus.yml
+++ b/src/roles/monitoring/files/prometheus.yml
@@ -9,15 +9,15 @@ global:
 
 scrape_configs:
   #The job name is added as a label `job=<job_name>`
-  - job_name: 'prometheus'
+  - job_name: "prometheus"
     # Override the interval that metrics are scraped
     scrape_interval: 15s
     static_configs:
       #targets: value can be a hostname or ip address
-      - targets: ['localhost:9090']
-  - job_name: 'node_exporter'
+      - targets: ["localhost:9090"]
+  - job_name: "node_exporter"
     static_configs:
-      - targets: ['localhost:9100']
-  - job_name: 'cadvisor'
+      - targets: ["prometheus_node_exporter:9100"]
+  - job_name: "cadvisor"
     static_configs:
-      - targets: ['localhost:31192']
+      - targets: ["cadvisor:31192"]
