--- a/src/roles/monitoring/tasks/prometheus-setup.yml
+++ b/src/roles/monitoring/tasks/prometheus-setup.yml
@@ -41,36 +41,53 @@
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
       - "/var/run/docker.sock:/var/run/docker.sock"
-      - "/docker/portainer:/data"
     labels:
       com.centurylinklabs.watchtower.enable: "true"
     container_default_behavior: compatibility
 
-# The container below collects docker/container metrics
-# NOTE: This is not compatible with arm architecture such as RaspberryPi or ARM Macs
-# Uncomment below to enable cadvisor on an AMD64 Architecture
-- name: Run 'cadvisor' - Docker Container
+- name: Run 'snmp explorer' - Docker Container
   docker_container:
-    name: cadvisor
-    image: gcr.io/cadvisor/cadvisor
-    pull: true
-    restart_policy: unless-stopped
+    name: prometheus_snmp_exporter
+    image: prom/snmp-exporter
     ports:
-      - 31192:8080
+      - 9116:9116
     networks:
       - name: curidge
+    pull: true
+    restart_policy: unless-stopped
     volumes:
-      - /:/rootfs:ro
-      - /var/run:/var/run:ro
-      - /sys:/sys:ro
-      - /var/lib/docker/:/var/lib/docker:ro
-      - /dev/disk/:/dev/disk:ro
-      - "/var/run/docker.sock:/var/run/docker.sock"
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
-      - "/docker/portainer:/data"
-    devices:
-      - /dev/kmsg
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "{{ host_snmp_explorer_location}}/snmp.yml:/etc/snmp_exporter/snmp.yml"
     labels:
       com.centurylinklabs.watchtower.enable: "true"
     container_default_behavior: compatibility
+# # The container below collects docker/container metrics
+# # NOTE: This is not compatible with arm architecture such as RaspberryPi or ARM Macs
+# # Uncomment below to enable cadvisor on an AMD64 Architecture
+# - name: Run 'cadvisor' - Docker Container
+#   docker_container:
+#     name: cadvisor
+#     image: gcr.io/cadvisor/cadvisor
+#     pull: true
+#     restart_policy: unless-stopped
+#     ports:
+#       - 31192:8080
+#     networks:
+#       - name: curidge
+#     volumes:
+#       - /:/rootfs:ro
+#       - /var/run:/var/run:ro
+#       - /sys:/sys:ro
+#       - /var/lib/docker/:/var/lib/docker:ro
+#       - /dev/disk/:/dev/disk:ro
+#       - "/var/run/docker.sock:/var/run/docker.sock"
+#       - "/etc/timezone:/etc/timezone:ro"
+#       - "/etc/localtime:/etc/localtime:ro"
+#       - "/docker/portainer:/data"
+#     devices:
+#       - /dev/kmsg
+#     labels:
+#       com.centurylinklabs.watchtower.enable: "true"
+#     container_default_behavior: compatibility
