--- a/src/roles/monitoring/files/prometheus.yml
+++ b/src/roles/monitoring/files/prometheus.yml
@@ -18,6 +18,21 @@ scrape_configs:
   - job_name: "node_exporter"
     static_configs:
       - targets: ["prometheus_node_exporter:9100"]
-  - job_name: "cadvisor"
+  # - job_name: "cadvisor"
+  #   static_configs:
+  #     - targets: ["cadvisor:31192"]
+  - job_name: "snmp_synology"
     static_configs:
-      - targets: ["cadvisor:31192"]
+      - targets: ["192.168.86.98"]
+    metrics_path: "/snmp"
+    params:
+      module: [synology]
+    scrape_interval: 10s
+    scrape_timeout: 5s
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: 192.168.86.7:9116 # The SNMP exporter's real hostname:port.
