--- a/src/roles/monitoring/tasks/configure.yml
+++ b/src/roles/monitoring/tasks/configure.yml
@@ -14,14 +14,19 @@
     mode: "0777"
     owner: root
 
+- name: Load 'nas.conf'
+  become: true
+  template:
+    src: nas.subdomain.conf
+    dest: "{{ cert_manager_folder_location }}/nginx/proxy-confs"
+
 - name: Ensure that the prometheus configuration is loaded
   become: true
-  copy:
+  template:
     src: prometheus.yml
     dest: "{{ host_docker_folder_location }}/prometheus.yml"
-    owner: root
     mode: "0777"
-    group: root
+    owner: root
 
 - name: Create docker volume (snmp)
   become: true
