--- a/src/roles/monitoring/templates/prometheus.yml
+++ b/src/roles/monitoring/templates/prometheus.yml
@@ -18,9 +18,14 @@ scrape_configs:
   - job_name: "node_exporter"
     static_configs:
       - targets: ["prometheus_node_exporter:9100"]
-  # - job_name: "cadvisor"
-  #   static_configs:
-  #     - targets: ["cadvisor:31192"]
+  - job_name: "home_assistant"
+    scrape_interval: 60s
+    metrics_path: /api/prometheus
+    scheme: https
+    authorization:
+      credentials: "{{ ha_prometheus_token }}"
+    static_configs:
+      - targets: ["home.keystoneridge.duckdns.org/api/prometheus"]
   - job_name: "snmp_synology"
     static_configs:
       - targets: ["{{ nas_ip }}"]
