fix quote issue

--- a/src/roles/monitoring/tasks/nut_exporter.yml
+++ b/src/roles/monitoring/tasks/nut_exporter.yml
@@ -9,7 +9,7 @@
       - name: curidge
     env:
       NUT_EXPORTER_SERVER: "{{ ansible_host }}"
-      NUT_EXPORTER_SERVERPORT: 3493
+      NUT_EXPORTER_SERVERPORT: "3493"
       NUT_EXPORTER_USERNAME: "{{ ups_monitor_username }}"
       NUT_EXPORTER_PASSWORD: "{{ ups_monitor_password }}"
       TZ: "{{ time_zone }}"
